# CharLCD

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: LCDBackend.h  LCDController.h  Symbols.h
src/: LCDBackend.cpp  LCDController.cpp  Symbols.cpp  bounce.cpp  test.cpp
